--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -259,6 +259,55 @@
             flex-direction: row;
             gap: 0.5rem;
             z-index: 100;
+            align-items: center;
+        }
+
+        /* Auto-follow toggle */
+        .auto-follow-toggle {
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            margin-right: 0.5rem;
+            padding-right: 0.75rem;
+            border-right: 1px solid var(--border-color);
+        }
+
+        .auto-follow-label {
+            font-size: 0.75rem;
+            color: var(--text-secondary);
+            white-space: nowrap;
+        }
+
+        .auto-follow-switch {
+            width: 32px;
+            height: 18px;
+            border-radius: 9px;
+            background: var(--text-tertiary);
+            cursor: pointer;
+            position: relative;
+            transition: background 0.2s ease;
+            border: none;
+            padding: 0;
+        }
+
+        .auto-follow-switch::after {
+            content: '';
+            position: absolute;
+            top: 2px;
+            left: 2px;
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            background: white;
+            transition: transform 0.2s ease;
+        }
+
+        .auto-follow-switch.active {
+            background: #22c55e;
+        }
+
+        .auto-follow-switch.active::after {
+            transform: translateX(14px);
         }
 
         /* Edge filter controls */
@@ -620,7 +669,7 @@
             <h1>🧭 Binnacle</h1>
             <p class="subtitle">Project State Tracker</p>
             <nav>
-                <button class="nav-btn active" data-view="graph">Task Graph</button>
+                <button class="nav-btn active" data-view="graph">Graph</button>
                 <button class="nav-btn" data-view="ready">Ready Tasks</button>
                 <button class="nav-btn" data-view="tests">Tests</button>
                 <button class="nav-btn" data-view="log">Activity Log</button>
@@ -651,6 +700,10 @@
                     <div class="edge-tooltip-date" id="edge-tooltip-date"></div>
                 </div>
                 <div class="zoom-controls">
+                    <div class="auto-follow-toggle">
+                        <span class="auto-follow-label">Follow active</span>
+                        <button class="auto-follow-switch" id="auto-follow-switch" title="Follow active task"></button>
+                    </div>
                     <button class="zoom-btn" id="zoom-in" title="Zoom In">+</button>
                     <div class="zoom-level" id="zoom-level">100%</div>
                     <button class="zoom-btn" id="zoom-out" title="Zoom Out">−</button>
@@ -794,7 +847,9 @@
                 // Selection state
                 selectedNode: null,
                 // Camera pan animation state
-                followAnimation: null  // { startPanX, startPanY, targetPanX, targetPanY, startTime, duration }
+                followAnimation: null,  // { startPanX, startPanY, targetPanX, targetPanY, startTime, duration }
+                // Auto-follow state
+                autoFollow: false
             }
         };
 
@@ -1177,6 +1232,21 @@
             state.graph.viewport.panY = 0;
             updateZoomDisplay();
         });
+
+        // Auto-follow toggle
+        document.getElementById('auto-follow-switch').addEventListener('click', () => {
+            state.graph.autoFollow = !state.graph.autoFollow;
+            updateAutoFollowDisplay();
+        });
+
+        function updateAutoFollowDisplay() {
+            const switchEl = document.getElementById('auto-follow-switch');
+            if (state.graph.autoFollow) {
+                switchEl.classList.add('active');
+            } else {
+                switchEl.classList.remove('active');
+            }
+        }
 
         function zoomCanvas(zoomDelta, centerX, centerY) {
             const canvas = document.getElementById('graph-canvas');
