fix(gui): Follow toggle now snaps to active task immediately
When enabling 'Follow active' toggle, the view now immediately pans to
the current in_progress task instead of waiting for a status transition.

Fixes: bn-113e

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -1320,6 +1320,10 @@
         document.getElementById('auto-follow-switch').addEventListener('click', () => {
             state.graph.autoFollow = !state.graph.autoFollow;
             updateAutoFollowDisplay();
+            // When enabling auto-follow, immediately snap to current active task
+            if (state.graph.autoFollow) {
+                snapToActiveTask();
+            }
         });
 
         function updateAutoFollowDisplay() {
@@ -1328,6 +1332,15 @@
                 switchEl.classList.add('active');
             } else {
                 switchEl.classList.remove('active');
+            }
+        }
+
+        // Find and pan to the first in_progress task
+        function snapToActiveTask() {
+            if (!state.tasks) return;
+            const activeTask = state.tasks.find(t => t.status === 'in_progress');
+            if (activeTask) {
+                panToNode(activeTask.id);
             }
         }
 
